<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listItemLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/goal_recycler"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:text="Goal"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toStartOf="@+id/completionImageView"
        app:layout_constraintStart_toEndOf="@id/goalCounter"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/type_recycler"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/typeText"
        android:textAlignment="textStart"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/typeImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goal_recycler" />

    <TextView
        android:id="@+id/description_recycler"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/descriptionText"
        android:textAlignment="textStart"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/typeImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_recycler" />

    <ToggleButton
        android:id="@+id/toggleButton_recycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:backgroundTint="@color/fui_transparent"
        android:textColor="#008000"
        android:textOff="Incomplete"
        android:textOn="Complete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_recycler" />

    <Button
        android:id="@+id/button_recycler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:backgroundTint="@color/fui_transparent"
        android:text="Remove"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toStartOf="@+id/typeImageView"
        app:layout_constraintTop_toBottomOf="@+id/description_recycler" />

    <ImageView
        android:id="@+id/completionImageView"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/typeImageView"
        android:layout_width="90dp"
        android:layout_height="111dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/completionImageView" />

    <TextView
        android:id="@+id/goalCounter"
        style="@style/ButtonStyle"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/goalCounter"
        app:layout_constraintEnd_toStartOf="@+id/goal_recycler"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>